Added a backup feature to Notion and made other changes for functionality

--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,9 @@
         "scripting",
         "sidePanel"
     ],
+    "host_permissions": [
+        "https://api.notion.com/*"
+    ],
     "action": {
         "default_icon": "icon.svg"
     },
